add zine video for device view

--- a/site/layouts/partials/obizine/zine.html
+++ b/site/layouts/partials/obizine/zine.html
@@ -1,3 +1,7 @@
+<div id="video">
+    <iframe id="iframe" src="https://player.vimeo.com/video/183144171" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
+
 <div id="obi00_0" class="section"></div>
 <div id="obi00" class="section"></div>
 <div id="obi01" class="section"></div>
