--- a/src/css/styles/artist-pages/obi.css
+++ b/src/css/styles/artist-pages/obi.css
@@ -1,183 +1,208 @@
+@import url('https://fonts.googleapis.com/css?family=Abel');
+
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 
-  body#obi {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    perspective: 1px;
-  }
+body#obi {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  perspective: 1px;
+}
 
-  .section {
-    display: flex;
-    align-items: center;
-    position: relative;
-    min-height: 1190px;
-    min-width: 1190px;
-    box-sizing: border-box;
-    background: 50% 50% / cover;
-  }
+.section {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-height: 1190px;
+  min-width: 1190px;
+  box-sizing: border-box;
+  background: 50% 50% / cover;
+}
 
-p.obi {
-    color: #000;
-    padding: 2em;
-    font-size: 14px;
+#obi00_00 {
+  background-color: black;
+  background-attachment: fixed;
+  padding-bottom: 2em;
+}
+
+.obi > h1,
+h3,
+p {
+  font-family: 'Abel', sans-serif;
+  color: white;
+}
+.obi > h1 {
+  font-size: 4em;
+}
+
+.obi > h3 {
+  font-size: 2em;
+  letter-spacing: 4px;
+}
+
+.obi > p {
+  font-size: 1.6em;
+  letter-spacing: 3px;
+  line-height: 1.5em;
+}
+
+.content {
+  max-width: 80%;
 }
 
 #video {
-  display: none
+  display: none;
 }
 
 #obi00_0 {
-  background-image: url("/images/obi/obi00_0.png");
+  background-image: url('/images/obi/obi00_0.png');
   background-attachment: fixed;
 }
 
 #obi00 {
-    background-image: url("/images/obi/obi00.jpg");
-    background-attachment: fixed;
-  }
-
+  background-image: url('/images/obi/obi00.jpg');
+  background-attachment: fixed;
+}
 
 #obi01 {
-  background-image: url("/images/obi/obi01.jpg");
+  background-image: url('/images/obi/obi01.jpg');
   background-attachment: fixed;
 }
 
 #obi02 {
-  background-image: url("/images/obi/obi02.jpg");
+  background-image: url('/images/obi/obi02.jpg');
   background-attachment: fixed;
 }
 
 #obi03 {
-  background-image: url("/images/obi/obi03.jpg");
+  background-image: url('/images/obi/obi03.jpg');
   background-attachment: fixed;
 }
 
 #obi04 {
-  background-image: url("/images/obi/obi04.jpg");
+  background-image: url('/images/obi/obi04.jpg');
   background-attachment: fixed;
 }
 
 #obi05 {
-  background-image: url("/images/obi/obi05.jpg");
+  background-image: url('/images/obi/obi05.jpg');
   background-attachment: fixed;
 }
 
 #obi06 {
-  background-image: url("/images/obi/obi06.jpg");
+  background-image: url('/images/obi/obi06.jpg');
   background-attachment: fixed;
 }
 
 #obi07 {
-  background-image: url("/images/obi/obi07.jpg");
+  background-image: url('/images/obi/obi07.jpg');
   background-attachment: fixed;
 }
 
 #obi08 {
-  background-image: url("/images/obi/obi08.jpg");
+  background-image: url('/images/obi/obi08.jpg');
   background-attachment: fixed;
 }
 
 #obi09 {
-  background-image: url("/images/obi/obi09.jpg");
+  background-image: url('/images/obi/obi09.jpg');
   background-attachment: fixed;
 }
 
 #obi10 {
-  background-image: url("/images/obi/obi10.jpg");
+  background-image: url('/images/obi/obi10.jpg');
   background-attachment: fixed;
 }
 
 #obi11 {
-  background-image: url("/images/obi/obi11.jpg");
+  background-image: url('/images/obi/obi11.jpg');
   background-attachment: fixed;
 }
 
 #obi12 {
-  background-image: url("/images/obi/obi12.jpg");
+  background-image: url('/images/obi/obi12.jpg');
   background-attachment: fixed;
 }
 
 #obi13 {
-  background-image: url("/images/obi/obi13.jpg");
+  background-image: url('/images/obi/obi13.jpg');
   background-attachment: fixed;
 }
 
 #obi14 {
-  background-image: url("/images/obi/obi14.jpg");
+  background-image: url('/images/obi/obi14.jpg');
   background-attachment: fixed;
 }
 
 #obi15 {
-  background-image: url("/images/obi/obi15.jpg");
+  background-image: url('/images/obi/obi15.jpg');
   background-attachment: fixed;
 }
 
 #obi16 {
-  background-image: url("/images/obi/obi16.jpg");
+  background-image: url('/images/obi/obi16.jpg');
   background-attachment: fixed;
 }
 
 #obi17 {
-  background-image: url("/images/obi/obi17.jpg");
+  background-image: url('/images/obi/obi17.jpg');
   background-attachment: fixed;
 }
 
 #obi18 {
-  background-image: url("/images/obi/obi18.jpg");
+  background-image: url('/images/obi/obi18.jpg');
   background-attachment: fixed;
 }
 
 #obi19 {
-  background-image: url("/images/obi/obi19.jpg");
+  background-image: url('/images/obi/obi19.jpg');
   background-attachment: fixed;
 }
 
 #obi20 {
-  background-image: url("/images/obi/obi20.jpg");
+  background-image: url('/images/obi/obi20.jpg');
   background-attachment: fixed;
 }
 
 #obi21 {
-  background-image: url("/images/obi/obi21.jpg");
+  background-image: url('/images/obi/obi21.jpg');
   background-attachment: fixed;
 }
 
 #obi22 {
-  background-image: url("/images/obi/obi22.jpg");
+  background-image: url('/images/obi/obi22.jpg');
   background-attachment: fixed;
 }
 
 #obi23 {
-  background-image: url("/images/obi/obi23.jpg");
+  background-image: url('/images/obi/obi23.jpg');
   background-attachment: fixed;
 }
 
 #obi24 {
-  background-image: url("/images/obi/obi24.jpg");
+  background-image: url('/images/obi/obi24.jpg');
   background-attachment: fixed;
 }
 
 #obi25 {
-  background-image: url("/images/obi/obi25.png");
+  background-image: url('/images/obi/obi25.png');
   background-attachment: fixed;
 }
 
 @media screen and (max-width: 60em) {
   * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
 
-  body#obi
-  {
-      background-image: url("/images/obi/obi04.jpg");
-      background: cover;
+  body#obi {
+    background-image: url('/images/obi/obi04.jpg');
+    background: cover;
   }
 
   .section {
