--- a/site/layouts/partials/label/header.html
+++ b/site/layouts/partials/label/header.html
@@ -12,4 +12,9 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 
-<body>
+<body id="label">
+  <div class="label_header">
+    <h1>   
+        <a class="snippet__section snippet__title" href="{{.RelPermalink}}">{{ .Title }}</a>
+    </h1>
+  </div>
