--- a/site/layouts/partials/landing.html
+++ b/site/layouts/partials/landing.html
@@ -1,55 +1,55 @@
 <div class="background">
   <div class="grid">
     <div class="gmail">
-      <a href="">
+      <a href="mailto:raarlabel@gmail.com">
           <img class="gm-img" src="images/icons/webloc.png" alt="">
       </a>
     </div>
 
     <div class="gmail-text">
-      <p>Boîte de réception (5) - raarlabel@gmail.com - Gmail</p>
+      <a href="mailto:raarlabel@gmail.com">Boîte de réception (5) - raarlabel@gmail.com - Gmail</a>
     </div>
 
     <div class="tw">
-      <a href="">
+      <a href="https://twitter.com/LabelRaar" target="_blank">
           <img src="images/icons/at.png" alt="">
       </a>
     </div>
 
     <div class="tw-text">
-      <p>RAAR Label (@LabelRAAR) | twitter</p>
+        <a href="https://twitter.com/LabelRaar" target="_blank">RAAR Label (@LabelRAAR) | twitter</a>
     </div>
 
     <div class="fb">
-      <a href="">
+      <a href="https://www.facebook.com/RAAR.FR/" target="_blank">
           <img src="images/icons/at.png" alt="">
       </a>
     </div>
 
     <div class="fb-text">
-      <p>RAAR Label | facebook</p>
+        <a href="https://www.facebook.com/RAAR.FR/" target="_blank">RAAR Label | facebook</a>
     </div>
 
 
     <div class="vinyl">
-      <a href="">
+      <a href="https://www.kompakt.fm/releases/raar004" target="_blank">
           <img src="images/icons/webloc.png" alt="">
       </a>
     </div>
 
     <div class="vinyl-text">
-      <p>ORDER ¬ Vinyl | Factory RAAR04</p>
+        <a href="https://www.kompakt.fm/releases/raar004" target="_blank">ORDER ¬ Vinyl | Factory RAAR04</a>
     </div>
 
 
     <div class="digital">
-      <a href="">
+      <a href="https://boomkat.com/products/raar004" target="_blank">
           <img src="images/icons/webloc.png" alt="">
       </a>
     </div>
 
     <div class="digital-text">
-      <p>ORDER ¬ Digital | Factory RAAR04</p>
+        <a href="https://boomkat.com/products/raar004" target="_blank">ORDER ¬ Digital | Factory RAAR04</a>
     </div>
 
 
@@ -64,23 +64,23 @@
     </div>
 
     <div class="releases">
-      <a href="">
+      <a href="https://drive.google.com/drive/folders/0B9oYyOHIB2ftV191VnVMUy1sdVE" target="_blank">
           <img src="images/icons/at.png" alt="">
       </a>
     </div>
 
     <div class="rel-text">
-      <p>ReleaseDownload</p>
+        <a href="https://drive.google.com/drive/folders/0B9oYyOHIB2ftV191VnVMUy1sdVE" target="_blank">ReleaseDownload</a>
     </div>
 
     <div class="paypal">
-      <a href="">
+      <a href="https://www.paypal.com/donate/?token=DZPlYUGTxBM2xdhZvaQZM7g3qT4tEE0yyzvoO4j9Ajq60Ch9ApF-pmvqclBnx2gcLKq0M0&country.x=FR&locale.x=FR" target="_blank">
           <img src="images/icons/webloc.png" alt="">
       </a>
     </div>
 
     <div class="pay-text text-wrap">
-      <p>PAYPAL__donations&business=raarlabef.html</p>
+        <a href="https://www.paypal.com/donate/?token=DZPlYUGTxBM2xdhZvaQZM7g3qT4tEE0yyzvoO4j9Ajq60Ch9ApF-pmvqclBnx2gcLKq0M0&country.x=FR&locale.x=FR" target="_blank">PAYPAL__donations&business=raarlabef.html</a>
     </div>
 
     <div class="logo">
@@ -94,13 +94,13 @@
     </div>
 
     <div class="abt">
-      <a href="">
+      <a href="https://datatransmission.co/wp-content/uploads/2015/09/RAAR-logo-1.jpeg" target="_blank">
           <img src="images/icons/rtf.png" alt="">
       </a>
     </div>
 
     <div class="abt-text">
-      <p>RAAR.rtf</p>
+        <a href="https://datatransmission.co/wp-content/uploads/2015/09/RAAR-logo-1.jpeg" target="_blank">RAAR.rtf</a>
     </div>
   </div>
 </div>
