--- a/site/layouts/partials/news/header.html
+++ b/site/layouts/partials/news/header.html
@@ -12,4 +12,7 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 
-<body>
+<body id="news">
+  <div class="news_header">
+  <h1> <a class="snippet__section snippet__title" href="{{.RelPermalink}}">{{ .Section | upper }} </a><br/>news, updates, releases, tours...</h1>
+  </div>
