--- a/site/layouts/partials/obiblanche/header.html
+++ b/site/layouts/partials/obiblanche/header.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
     <meta name="generator" content="2015.0.0.309" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/">
 
     <base href="{{ $.Site.BaseURL }}">
     <title>{{ $.Site.Title }}</title>
