--- a/site/layouts/partials/obizine/header.html
+++ b/site/layouts/partials/obizine/header.html
@@ -9,6 +9,7 @@
   <base href="{{ $.Site.BaseURL }}">
   <title>{{ $.Site.Title }}</title>
   <link rel="stylesheet" href="css/main.css" />
+  <base href="/">
 </head>
 
 <body id="obi">
