add audio to obi artist page

--- a/site/layouts/partials/obiblanche/header.html
+++ b/site/layouts/partials/obiblanche/header.html
@@ -326,3 +326,7 @@
 </head>
 
 <body>
+    <audio loop autoplay="true">
+        <source src="/audio/obiloop.mp3" type="audio/mpeg">
+        <source src="/audio/obiloop.aac" type="audio/aac">
+    </audio>
