--- a/src/css/styles/artist-pages/signup.css
+++ b/src/css/styles/artist-pages/signup.css
@@ -2,6 +2,10 @@
     display: initial;
 } */
 
+audio { 
+    display:none;
+  }
+
 #mc_embed_signup {
     display: flex;
     justify-content: center;
@@ -19,6 +23,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.mc-field-group label {
+    padding-bottom: 0.5em;
 }
 
 input.button {
