add resize zine img & bio layout

--- a/site/layouts/partials/obizine/zine.html
+++ b/site/layouts/partials/obizine/zine.html
@@ -5,44 +5,52 @@
 
 <div id="obi00_00" class="section">
     <div class="content obi">
-        <h1>Obi Blanche - Uncanny, Unseasonal</h1>
-        <p>
-            Star Wars never meant anything to me. Uncanny, Unseasonal is a diary of someone's life which could be a fantasy, a true audiobiographical
-            piece that tastes the best when relished together with photographs. The images, blurring the lines between documentative
-            and staged photography, are spiced up with music carved from same wood: the roar is tangible, the execution intuitive
-            and raw. Tension in the air turns the situation exiting. We breath from that excitement.
+        <div class="ep">
+            <h1>Obi Blanche
+                <span class="it">Uncanny, Unseasonal EP</span>
+                <span class="subhead">with photographic zine</span>
+            </h1>
+            <p class="ep-bio">
+                Star Wars never meant anything to me. Uncanny, Unseasonal is a diary of someone's life which could be a fantasy, a true audiobiographical
+                piece that tastes the best when relished together with photographs. The images, blurring the lines between
+                documentative and staged photography, are spiced up with music carved from same wood: the roar is tangible,
+                the execution intuitive and raw. Tension in the air turns the situation exiting. We breath from that excitement.
 
-        </p>
+            </p>
+        </div>
 
-        <h3>About the artist</h3>
-        <p>
-            Jimi Tenor is my mother and Andy McCoy father. We didn’t have many instruments home, but we loved to listen to music from
-            a turntable while watching projected slideshows. One day there was a MS-20 in the house, Jimi got it from a hypersensitive
-            individual who realized that he had an allergy towards computer screens and wanted to join the roaming circus.
-            He sold the MS-20 for peanuts. I loved that little synth. Andy didn’t care, he was only interested towards guitars
-            and rock’n’roll lifestyle.
-        </p>
+        <div class="bio">
+            <h3>About the artist</h3>
 
-        <p>
-            Jimi’s bugaboo filled with raunchy speakers rolling through Lahti, the business city, inspired me and I started to discover
-            my own music. First hip hop beats and scratching. I destroyed our rusty poor turntable but luckily my grandmother
-            got me a proper Technics one. I went through all electronic music genres, always having a soft spot for how gritty
-            the old Mr.Oizo sounded.
-        </p>
+            <p>
+                Jimi Tenor is my mother and Andy McCoy my father. We didn’t have many instruments home, but we loved to listen to music from
+                a turntable while watching projected slideshows. One day there was a MS-20 in the house, Jimi got it from
+                a hypersensitive individual who realized that he had an allergy towards computer screens and wanted to join
+                the roaming circus. He sold the MS-20 for peanuts. I loved that little synth. Andy didn’t care, he was only
+                interested in guitars and a rock’n’roll lifestyle.
+            </p>
 
-        <p>
-            Electronic music was lonely and I wanted to experience band life. I learned to play some guitar, but not the way Andy played
-            it. I was more interested in dissonance and advanced tunings. We toured the world. When I was travelling my father
-            told me to document the life on the road. I started snapshotting: it was exciting. I met a lot of eccentric people,
-            many were part of the roaming circus but I never met the bald wizard again who sold the synth in the first place.
-            I hope he’s happy and that electromagnetic allergy is not a burden anymore.
-        </p>
+            <p>
+                Jimi’s bugaboo filled with raunchy speakers rolling through Lahti, the business city, inspired me and I started to discover
+                my own music. First hip-hop beats and scratching. I destroyed our rusty poor turntable but luckily my grandmother
+                got me a proper Technics one. I went through all electronic music genres, always with a soft spot for how
+                gritty the old Mr.Oizo sounded.
+            </p>
 
-        <p>
-            Exhibiting pictures in Berlin was a new field, it started a new phase. Went back on the road, this time photographing, really
-            fell in love with Los Angeles. Now music and photographs complement each other. I’m also starting to create an
-            allergy towards computers. Let’s see where the circus takes me next...
-        </p>
+            <p>
+                Electronic music was lonely and I wanted to experience band life. I learned to play some guitar, but not the way Andy played
+                it. I was more interested in dissonance and advanced tunings. We toured the world. When I was travelling
+                my father told me to document the life on the road. I started snapshotting: it was exciting. I met a lot
+                of eccentric people, many were part of the roaming circus but I never met the bald wizard again who sold
+                the synth in the first place. I hope he’s happy and that electromagnetic allergy is not a burden anymore.
+            </p>
+
+            <p>
+                Exhibiting pictures in Berlin was a new field, it started a new phase. Went back on the road, this time photographing, really
+                fell in love with Los Angeles. Now music and photographs complement each other. I’m also starting to create
+                an allergy towards computers. Let’s see where the circus takes me next.
+            </p>
+        </div>
     </div>
 </div>
 <div id="obi00_0" class="section"></div>
