adjust text & mobile layout

--- a/site/layouts/partials/obizine/zine.html
+++ b/site/layouts/partials/obizine/zine.html
@@ -1,9 +1,9 @@
-<div id="video">
+<!-- <div id="video">
     <iframe id="iframe" src="https://player.vimeo.com/video/183144171" width="640" height="360" frameborder="0" webkitallowfullscreen
         mozallowfullscreen allowfullscreen></iframe>
-</div>
+</div> -->
 
-<div id="obi00_00" class="section">
+<div id="obi00_00" class="artist-info">
     <div class="content obi">
         <div class="ep">
             <h1>Obi Blanche
@@ -53,30 +53,84 @@
         </div>
     </div>
 </div>
-<div id="obi00_0" class="section"></div>
-<div id="obi00" class="section"></div>
-<div id="obi01" class="section"></div>
-<div id="obi02" class="section"></div>
-<div id="obi03" class="section"></div>
-<div id="obi04" class="section"></div>
-<div id="obi05" class="section"></div>
-<div id="obi06" class="section"></div>
-<div id="obi07" class="section"></div>
-<div id="obi08" class="section"></div>
-<div id="obi09" class="section"></div>
-<div id="obi10" class="section"></div>
-<div id="obi11" class="section"></div>
-<div id="obi12" class="section"></div>
-<div id="obi13" class="section"></div>
-<div id="obi14" class="section"></div>
-<div id="obi15" class="section"></div>
-<div id="obi16" class="section"></div>
-<div id="obi17" class="section"></div>
-<div id="obi18" class="section"></div>
-<div id="obi19" class="section"></div>
-<div id="obi20" class="section"></div>
-<div id="obi21" class="section"></div>
-<div id="obi22" class="section"></div>
-<div id="obi23" class="section"></div>
-<div id="obi24" class="section"></div>
-<div id="obi25" class="section"></div>
+<div id="obi00_0" class="section">
+    <img class="mobile-zine" src='/images/obi/obi00_0.jpg' alt="obizine">
+</div>
+<div id="obi00" class="section">
+    <img class="mobile-zine" src='/images/obi/obi00.jpg' alt="obizine">
+</div>
+<div id="obi01" class="section">
+    <img class="mobile-zine" src='/images/obi/obi01.jpg' alt="obizine">
+</div>
+<div id="obi02" class="section">
+    <img class="mobile-zine" src='/images/obi/obi02.jpg' alt="obizine">
+</div>
+<div id="obi03" class="section">
+    <img class="mobile-zine" src='/images/obi/obi03.jpg' alt="obizine">
+</div>
+<div id="obi04" class="section">
+    <img class="mobile-zine" src='/images/obi/obi04.jpg' alt="obizine">
+</div>
+<div id="obi05" class="section">
+    <img class="mobile-zine" src='/images/obi/obi05.jpg' alt="obizine">
+</div>
+<div id="obi06" class="section">
+    <img class="mobile-zine" src='/images/obi/obi06.jpg' alt="obizine">
+</div>
+<div id="obi07" class="section">
+    <img class="mobile-zine" src='/images/obi/obi07.jpg' alt="obizine">
+</div>
+<div id="obi08" class="section">
+    <img class="mobile-zine" src='/images/obi/obi08.jpg' alt="obizine">
+</div>
+<div id="obi09" class="section">
+    <img class="mobile-zine" src='/images/obi/obi09.jpg' alt="obizine">
+</div>
+<div id="obi10" class="section">
+    <img class="mobile-zine" src='/images/obi/obi10.jpg' alt="obizine">
+</div>
+<div id="obi11" class="section">
+    <img class="mobile-zine" src='/images/obi/obi11.jpg' alt="obizine">
+</div>
+<div id="obi12" class="section">
+    <img class="mobile-zine" src='/images/obi/obi12.jpg' alt="obizine">
+</div>
+<div id="obi13" class="section">
+    <img class="mobile-zine" src='/images/obi/obi13.jpg' alt="obizine">
+</div>
+<div id="obi14" class="section">
+    <img class="mobile-zine" src='/images/obi/obi14.jpg' alt="obizine">
+</div>
+<div id="obi15" class="section">
+    <img class="mobile-zine" src='/images/obi/obi15.jpg' alt="obizine">
+</div>
+<div id="obi16" class="section">
+    <img class="mobile-zine" src='/images/obi/obi16.jpg' alt="obizine">
+</div>
+<div id="obi17" class="section">
+    <img class="mobile-zine" src='/images/obi/obi17.jpg' alt="obizine">
+</div>
+<div id="obi18" class="section">
+    <img class="mobile-zine" src='/images/obi/obi18.jpg' alt="obizine">
+</div>
+<div id="obi19" class="section">
+    <img class="mobile-zine" src='/images/obi/obi19.jpg' alt="obizine">
+</div>
+<div id="obi20" class="section">
+    <img class="mobile-zine" src='/images/obi/obi20.jpg' alt="obizine">
+</div>
+<div id="obi21" class="section">
+    <img class="mobile-zine" src='/images/obi/obi21.jpg' alt="obizine">
+</div>
+<div id="obi22" class="section">
+    <img class="mobile-zine" src='/images/obi/obi22.jpg' alt="obizine">
+</div>
+<div id="obi23" class="section">
+    <img class="mobile-zine" src='/images/obi/obi23.jpg' alt="obizine">
+</div>
+<div id="obi24" class="section">
+    <img class="mobile-zine" src='/images/obi/obi24.jpg' alt="obizine">
+</div>
+<div id="obi25" class="section">
+    <img class="mobile-zine" src='/images/obi/obi25.png' alt="obizine">
+</div>
