--- a/src/css/styles/artist-pages/obi.css
+++ b/src/css/styles/artist-pages/obi.css
@@ -17,8 +17,8 @@ body#obi {
   display: flex;
   justify-content: center;
   position: relative;
-  min-height: 1190px;
-  min-width: 1190px;
+  min-height: 1191px;
+  min-width: 842px;
   box-sizing: border-box;
   background: 50% 50% / cover;
 }
@@ -29,11 +29,16 @@ body#obi {
   padding-bottom: 2em;
 }
 
-.obi {
-  /*  display: grid;
-  grid-template-columns: 1fr 2fr;
+.artist-info {
+  display: flex;
+  justify-content: center;
+}
 
-  */
+.mobile-zine {
+  display: none;
+}
+
+.obi {
   display: flex;
   flex-direction: column;
 }
@@ -55,10 +60,13 @@ div {
 }
 
 .ep > p,
-.bio > p {
+.bio > p,
+input.button,
+.signup-title,
+label {
   font-size: 1.6em;
   letter-spacing: 3px;
-  line-height: 1.5em;
+  line-height: 1.7em;
 }
 
 .bio {
@@ -74,7 +82,7 @@ div {
 .ep-bio {
   display: flex;
   align-items: center;
-  padding-top: 1em;
+  padding: 1em 0 0 2em;
 }
 
 .it {
@@ -91,143 +99,121 @@ div {
   max-width: 80%;
 }
 
-#video {
+/* #video {
   display: none;
+} */
+
+#obi > div {
+  display: fixed;
+  background-attachment: fixed;
 }
 
 #obi00_0 {
   background-image: url('/images/obi/obi00_0.jpg');
-  background-attachment: fixed;
 }
 
 #obi00 {
   background-image: url('/images/obi/obi00.jpg');
-  background-attachment: fixed;
 }
 
 #obi01 {
   background-image: url('/images/obi/obi01.jpg');
-  background-attachment: fixed;
 }
 
 #obi02 {
   background-image: url('/images/obi/obi02.jpg');
-  background-attachment: fixed;
 }
 
 #obi03 {
   background-image: url('/images/obi/obi03.jpg');
-  background-attachment: fixed;
 }
 
 #obi04 {
   background-image: url('/images/obi/obi04.jpg');
-  background-attachment: fixed;
 }
 
 #obi05 {
   background-image: url('/images/obi/obi05.jpg');
-  background-attachment: fixed;
 }
 
 #obi06 {
   background-image: url('/images/obi/obi06.jpg');
-  background-attachment: fixed;
 }
 
 #obi07 {
   background-image: url('/images/obi/obi07.jpg');
-  background-attachment: fixed;
 }
 
 #obi08 {
   background-image: url('/images/obi/obi08.jpg');
-  background-attachment: fixed;
 }
 
 #obi09 {
   background-image: url('/images/obi/obi09.jpg');
-  background-attachment: fixed;
 }
 
 #obi10 {
   background-image: url('/images/obi/obi10.jpg');
-  background-attachment: fixed;
 }
 
 #obi11 {
   background-image: url('/images/obi/obi11.jpg');
-  background-attachment: fixed;
 }
 
 #obi12 {
   background-image: url('/images/obi/obi12.jpg');
-  background-attachment: fixed;
 }
 
 #obi13 {
   background-image: url('/images/obi/obi13.jpg');
-  background-attachment: fixed;
 }
 
 #obi14 {
   background-image: url('/images/obi/obi14.jpg');
-  background-attachment: fixed;
 }
 
 #obi15 {
   background-image: url('/images/obi/obi15.jpg');
-  background-attachment: fixed;
 }
 
 #obi16 {
   background-image: url('/images/obi/obi16.jpg');
-  background-attachment: fixed;
 }
 
 #obi17 {
   background-image: url('/images/obi/obi17.jpg');
-  background-attachment: fixed;
 }
 
 #obi18 {
   background-image: url('/images/obi/obi18.jpg');
-  background-attachment: fixed;
 }
 
 #obi19 {
   background-image: url('/images/obi/obi19.jpg');
-  background-attachment: fixed;
 }
 
 #obi20 {
   background-image: url('/images/obi/obi20.jpg');
-  background-attachment: fixed;
 }
 
 #obi21 {
   background-image: url('/images/obi/obi21.jpg');
-  background-attachment: fixed;
 }
 
 #obi22 {
   background-image: url('/images/obi/obi22.jpg');
-  background-attachment: fixed;
 }
 
 #obi23 {
   background-image: url('/images/obi/obi23.jpg');
-  background-attachment: fixed;
 }
 
 #obi24 {
   background-image: url('/images/obi/obi24.jpg');
-  background-attachment: fixed;
 }
 
 #obi25 {
   background-image: url('/images/obi/obi25.png');
-  background-attachment: fixed;
 }
 
 @media screen and (max-width: 60em) {
@@ -237,7 +223,39 @@ div {
     padding: 0;
   }
 
-  body#obi {
+  #obi > div {
+    background-image: none;
+  }
+
+  .mobile-zine {
+    display: flex;
+    max-width: 100%;
+    display: block;
+    height: auto;
+  }
+
+  .section {
+    display: unset;
+    justify-content: unset;
+    position: unset;
+    min-height: unset;
+    min-width: unset;
+    box-sizing: unset;
+    background: unset;
+  }
+
+  .ep {
+    display: -ms-grid;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .ep-bio {
+    align-items: center;
+    padding: 0em 0px 2em 0em;
+  }
+
+  /* body#obi {
     background-image: url('/images/obi/obi04.jpg');
     background: cover;
   }
@@ -255,5 +273,5 @@ div {
 
   #iframe {
     padding: 2em;
-  }
+  } */
 }
