--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,3 +17,5 @@
 @import 'styles/label.css';
 @import 'styles/mq-label/mq-label-desk.css';
 @import 'styles/mq-label/mq-label-tab.css';
+
+@import 'styles/audioplayer.css';
