--- a/site/layouts/partials/releases/footer.html
+++ b/site/layouts/partials/releases/footer.html
@@ -1,6 +1,7 @@
-<script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
-<script type="text/javascript" src="../js/audioplayer/soundcloud.player.api.js"></script>
-<script type="text/javascript" src="../js/audioplayer/sc-player.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="./js/audioplayer/soundcloud.player.api.js"></script>
+<script type="text/javascript" src="./js/audioplayer/sc-player.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="releases.js"></script>
 </body>
 
