--- a/site/layouts/partials/releases/footer.html
+++ b/site/layouts/partials/releases/footer.html
@@ -1,8 +1,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="./js/audioplayer/soundcloud.player.api.js"></script>
-<script type="text/javascript" src="./js/audioplayer/sc-player.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="releases.js"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/soundcloud/soundcloud-custom-player/master/js/soundcloud.player.api.js"></script>
+<script src="https://cdn.rawgit.com/soundcloud/soundcloud-custom-player/master/js/sc-player.js"></script>
 </body>
 
 </html>
