--- a/site/layouts/partials/obizine/zine.html
+++ b/site/layouts/partials/obizine/zine.html
@@ -50,6 +50,8 @@
                 fell in love with Los Angeles. Now music and photographs complement each other. I’m also starting to create
                 an allergy towards computers. Let’s see where the circus takes me next.
             </p>
+
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//http://api.soundcloud.com/playlists/228141502%3Fsecret_token%3Ds-CM4B2&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
         </div>
     </div>
 </div>
