add releases, insta, obi icon links

--- a/site/layouts/partials/landing.html
+++ b/site/layouts/partials/landing.html
@@ -30,19 +30,29 @@
             <a href="https://www.facebook.com/RAAR.FR/" target="_blank">RAAR Label | facebook</a>
         </div>
 
+        <div class="insta">
+            <a href="https://www.instagram.com/labelraar/" target="_blank">
+                <img src="images/icons/at.png" alt="">
+            </a>
+        </div>
 
-        <div class="vinyl">
-            <a href="https://www.kompakt.fm/releases/raar004" target="_blank">
+        <div class="insta-text">
+            <a href="https://www.instagram.com/labelraar/" target="_blank">RAAR Label | instagram</a>
+        </div>
+
+
+        <div class="obiblanche">
+            <a href="/obiblanche/">
                 <img src="images/icons/webloc.png" alt="">
             </a>
         </div>
 
-        <div class="vinyl-text">
-            <a href="https://www.kompakt.fm/releases/raar004" target="_blank">ORDER ¬ Vinyl | Factory RAAR04</a>
+        <div class="obiblanche-text">
+            <a href="obiblanche/">OBI BLANCHE RAAR07</a>
         </div>
 
 
-        <div class="digital">
+        <!-- <div class="digital">
             <a href="https://boomkat.com/products/raar004" target="_blank">
                 <img src="images/icons/webloc.png" alt="">
             </a>
@@ -50,7 +60,7 @@
 
         <div class="digital-text">
             <a href="https://boomkat.com/products/raar004" target="_blank">ORDER ¬ Digital | Factory RAAR04</a>
-        </div>
+        </div> -->
 
 
         <div class="code">
@@ -64,13 +74,13 @@
         </div>
 
         <div class="releases">
-            <a href="https://drive.google.com/drive/folders/0B9oYyOHIB2ftV191VnVMUy1sdVE" target="_blank">
+            <a href="/releases">
                 <img src="images/icons/at.png" alt="">
             </a>
         </div>
 
         <div class="rel-text">
-            <a href="https://drive.google.com/drive/folders/0B9oYyOHIB2ftV191VnVMUy1sdVE" target="_blank">ReleaseDownload</a>
+            <a href="/releases">RAAR Releases</a>
         </div>
 
         <div class="paypal">
