--- a/site/layouts/partials/landing.html
+++ b/site/layouts/partials/landing.html
@@ -2,7 +2,7 @@
     <div class="grid">
         <div class="gmail">
             <a href="mailto:raarlabel@gmail.com">
-                <img class="gm-img" src="images/icons/webloc.png" alt="">
+                <img class="gm-img" src="images/icons/email_us.png" alt="skull">
             </a>
         </div>
 
@@ -12,7 +12,7 @@
 
         <div class="tw">
             <a href="https://twitter.com/LabelRaar" target="_blank">
-                <img src="images/icons/at.png" alt="">
+                <img src="images/icons/twitter.png" alt="">
             </a>
         </div>
 
@@ -22,7 +22,7 @@
 
         <div class="fb">
             <a href="https://www.facebook.com/RAAR.FR/" target="_blank">
-                <img src="images/icons/at.png" alt="">
+                <img src="images/icons/facebook.png" alt="">
             </a>
         </div>
 
@@ -32,7 +32,7 @@
 
         <div class="insta">
             <a href="https://www.instagram.com/labelraar/" target="_blank">
-                <img src="images/icons/at.png" alt="">
+                <img src="images/icons/instagram.png" alt="">
             </a>
         </div>
 
@@ -43,7 +43,7 @@
 
         <div class="obiblanche">
             <a href="/obiblanche/">
-                <img src="images/icons/webloc.png" alt="">
+                <img src="images/icons/obi.png" alt="">
             </a>
         </div>
 
@@ -62,7 +62,7 @@
             <a href="https://boomkat.com/products/raar004" target="_blank">ORDER ¬ Digital | Factory RAAR04</a>
         </div> -->
 
-
+        <!-- 
         <div class="code">
             <a href="">
                 <img src="images/icons/terminal.png" alt="">
@@ -71,11 +71,11 @@
 
         <div class="code-text text-wrap">
             <p>wwwCode%45%72%73%6f%6e%20%52%79%62%6f%64</p>
-        </div>
+        </div> -->
 
         <div class="releases">
             <a href="/releases">
-                <img src="images/icons/at.png" alt="">
+                <img src="images/icons/new_releases.png" alt="">
             </a>
         </div>
 
@@ -86,7 +86,7 @@
         <div class="paypal">
             <a href="https://www.paypal.com/donate/?token=DZPlYUGTxBM2xdhZvaQZM7g3qT4tEE0yyzvoO4j9Ajq60Ch9ApF-pmvqclBnx2gcLKq0M0&country.x=FR&locale.x=FR"
                 target="_blank">
-                <img src="images/icons/webloc.png" alt="">
+                <img src="images/icons/payus.png" alt="">
             </a>
         </div>
 
@@ -109,7 +109,7 @@
 
         <div class="abt">
             <a href="/label">
-                <img src="images/icons/rtf.png" alt="">
+                <img src="images/icons/news.png" alt="">
             </a>
         </div>
 
