--- a/site/layouts/partials/obizine/zine.html
+++ b/site/layouts/partials/obizine/zine.html
@@ -51,7 +51,7 @@
                 an allergy towards computers. Let’s see where the circus takes me next.
             </p>
 
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//http://api.soundcloud.com/playlists/228141502%3Fsecret_token%3Ds-CM4B2&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+            <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/228141502&amp;color=%233a2c2c&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
         </div>
     </div>
 </div>
