--- a/site/layouts/partials/landing.html
+++ b/site/layouts/partials/landing.html
@@ -60,18 +60,20 @@
 
         <div class="digital-text">
             <a href="https://boomkat.com/products/raar004" target="_blank">ORDER ¬ Digital | Factory RAAR04</a>
-        </div> -->
+        </div>  -->
 
-        <!-- 
+
         <div class="code">
-            <a href="">
-                <img src="images/icons/terminal.png" alt="">
+            <a href="/news">
+                <img src="images/icons/news_updates.png" alt="">
             </a>
         </div>
 
-        <div class="code-text text-wrap">
-            <p>wwwCode%45%72%73%6f%6e%20%52%79%62%6f%64</p>
-        </div> -->
+        <div class="code-text">
+            <a href="/news">
+                <p>RAAR news</p>
+            </a>
+        </div>
 
         <div class="releases">
             <a href="/releases">
