--- a/site/layouts/partials/landing.html
+++ b/site/layouts/partials/landing.html
@@ -52,15 +52,15 @@
         </div>
 
 
-        <!-- <div class="digital">
-            <a href="https://boomkat.com/products/raar004" target="_blank">
-                <img src="images/icons/webloc.png" alt="">
+        <div class="shop">
+            <a href="https://thehyv.shop/collections/raar" target="_blank">
+                <img src="images/icons/shop.png" alt="">
             </a>
         </div>
 
-        <div class="digital-text">
-            <a href="https://boomkat.com/products/raar004" target="_blank">ORDER ¬ Digital | Factory RAAR04</a>
-        </div>  -->
+        <div class="shop-text">
+            <a href="https://thehyv.shop/collections/raar" target="_blank">SHOP RAAR</a>
+        </div>
 
 
         <div class="code">
