--- a/src/css/styles/base.css
+++ b/src/css/styles/base.css
@@ -69,229 +69,202 @@ p {
   display: grid;
   grid-template-columns: minmax(100px, 200px), minmax(50px);
   grid-template-rows: repeat(15, 1fr);
+  padding: 20px;
 }
 
 .grid div {
   display: flex;
   align-items: center;
+  width: 75px;
 }
 
 .gmail {
   grid-row-start: 1;
-  /* autoprefixer: off */
   grid-row-end: 2;
   grid-column-start: 1;
-  /* autoprefixer: off */
   grid-column-end: 2;
 }
 
 .gmail-text {
   grid-row-start: 1;
-  /* autoprefixer: off */
   grid-row-end: 2;
   grid-column-start: 2;
-  /* autoprefixer: off */
   grid-column-end: 3;
-  transform: translateX(-0.6em) translateY(-0.2em);
+  transform: translateX(-3.5em) translateY(0.3em);
 }
 
 .tw {
   grid-row-start: 2;
-  /* autoprefixer: off */
   grid-row-end: 3;
   grid-column-start: 1;
-  /* autoprefixer: off */
   grid-column-end: 2;
-  transform: translateX(1.6em) translateY(1.2em);
+  transform: translateX(1em) translateY(1em);
 }
 
 .tw-text {
   grid-row-start: 2;
-  /* autoprefixer: off */
   grid-row-end: 3;
   grid-column-start: 2;
-  /* autoprefixer: off */
   grid-column-end: 3;
-  transform: translateX(0.9em) translateY(0.5em);
+  transform: translateX(-2.5em) translateY(1em);
 }
 
 .fb {
   grid-row-start: 3;
-  /* autoprefixer: off */
   grid-row-end: 4;
   grid-column-start: 1;
-  /* autoprefixer: off */
   grid-column-end: 2;
-  transform: translateX(-1.5em) translateY(-0.4em);
+  transform: translateX(0em) translateY(0.2em);
 }
 
 .fb-text {
   grid-row-start: 3;
-  /* autoprefixer: off */
   grid-row-end: 4;
   grid-column-start: 2;
-  /* autoprefixer: off */
   grid-column-end: 3;
-  transform: translateX(-2.1em) translateY(-0.6em);
+  transform: translateX(-3.6em) translateY(0.2em);
 }
 
-.vinyl {
+.insta {
   grid-row-start: 4;
-  /* autoprefixer: off */
   grid-row-end: 5;
   grid-column-start: 1;
-  /* autoprefixer: off */
+  grid-column-end: 2;
+  transform: translateX(3em) translateY(-1em);
+}
+
+.insta-text {
+  grid-row-start: 4;
+  grid-row-end: 5;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  transform: translateX(-0.9em) translateY(-0.5em);
+}
+/* 
+.vinyl {
+  grid-row-start: 4;
+  grid-row-end: 5;
+  grid-column-start: 1;
   grid-column-end: 2;
   transform: translateX(2.8em) translateY(0.6em);
 }
 
 .vinyl-text {
   grid-row-start: 4;
-  /* autoprefixer: off */
   grid-row-end: 5;
   grid-column-start: 2;
-  /* autoprefixer: off */
   grid-column-end: 3;
   transform: translateX(2.3em) translateY(0.6em);
-}
-
-.code {
-  grid-row-start: 10;
-  /* autoprefixer: off */
-  grid-row-end: 11;
-  grid-column-start: 1;
-  /* autoprefixer: off */
-  grid-column-end: 2;
-  transform: translateX(1em) translateY(2.3em);
-}
-
-.code-text {
-  grid-row-start: 10;
-  /* autoprefixer: off */
-  grid-row-end: 11;
-  grid-column-start: 2;
-  /* autoprefixer: off */
-  grid-column-end: 3;
-  transform: translateX(1.1em) translateY(2.3em);
-}
+} */
 
 .releases {
-  grid-row-start: 6;
-  /* autoprefixer: off */
-  grid-row-end: 7;
+  grid-row-start: 5;
+  grid-row-end: 6;
   grid-column-start: 1;
-  /* autoprefixer: off */
-  column-row-end: 2;
-  transform: translateX(0.6em) translateY(1.3em);
+  grid-column-end: 2;
+  transform: translateX(0em) translateY(1em);
 }
 
 .rel-text {
-  grid-row-start: 6;
-  /* autoprefixer: off */
-  grid-row-end: 7;
+  grid-row-start: 5;
+  grid-row-end: 6;
   grid-column-start: 2;
-  /* autoprefixer: off */
   grid-column-end: 3;
-  transform: translateX(0.1em) translateY(0.7em);
+  transform: translateX(-4em) translateY(1em);
 }
 
 .shop {
-  grid-row-start: 3;
-  /* autoprefixer: off */
-  grid-row-end: 4;
-  grid-column-start: 4;
-  width: 84px;
-  /* autoprefixer: off */
-  grid-column-end: 5;
-  transform: translateX(3.6em) translateY(-0.7em);
+  grid-row-start: 6;
+  grid-row-end: 7;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  transform: translateX(2em) translateY(0.5em);
 }
 
 .shop-text {
-  grid-row-start: 3;
-  /* autoprefixer: off */
-  grid-row-end: 4;
-  grid-column-start: 5;
-  /* autoprefixer: off */
-  grid-column-end: 6;
-  transform: translateX(-1.9em) translateY(-0.3em);
+  grid-row-start: 6;
+  grid-row-end: 7;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  transform: translateX(-1.7em) translateY(0em);
 }
 
 .obiblanche {
-  grid-row-start: 5;
-  /* autoprefixer: off */
-  grid-row-end: 6;
-  grid-column-start: 4;
-  /* autoprefixer: off */
-  grid-column-end: 5;
-  transform: translateX(2.3em) translateY(-0.2em);
+  grid-row-start: 7;
+  grid-row-end: 8;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  transform: translateX(1em) translateY(-1em);
 }
 
 .obiblanche-text {
-  grid-row-start: 5;
-  /* autoprefixer: off */
-  grid-row-end: 6;
-  grid-column-start: 4;
-  /* autoprefixer: off */
-  grid-column-end: 5;
-  transform: translateX(9.5em) translateY(-0.1em);
+  grid-row-start: 7;
+  grid-row-end: 8;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  transform: translateX(-2.5em) translateY(-1em);
 }
 
 .paypal {
-  grid-row-start: 7;
-  /* autoprefixer: off */
-  grid-row-end: 8;
+  grid-row-start: 8;
+  grid-row-end: 9;
   grid-column-start: 1;
-  /* autoprefixer: off */
   grid-column-end: 2;
-  transform: translateX(-0.1em) translateY(2.3em);
+  transform: translateX(0em) translateY(1em);
 }
 
 .pay-text {
-  grid-row-start: 7;
-  /* autoprefixer: off */
-  grid-row-end: 8;
+  grid-row-start: 8;
+  grid-row-end: 9;
   grid-column-start: 2;
-  /* autoprefixer: off */
   grid-column-end: 3;
-  transform: translateX(-0.5em) translateY(2.5em);
+  transform: translateX(-3.7em) translateY(1em);
 }
 
 .logo {
   grid-row-start: 9;
-  /* autoprefixer: off */
   grid-row-end: 10;
   grid-column-start: 1;
-  /* autoprefixer: off */
   grid-column-end: 2;
-  transform: translateX(3.6em) translateY(1.3em);
+  transform: translateX(0em) translateY(1em);
 }
 
 .logo-text {
   grid-row-start: 9;
-  /* autoprefixer: off */
   grid-row-end: 10;
   grid-column-start: 2;
-  /* autoprefixer: off */
   grid-column-end: 3;
-  transform: translateX(4.3em) translateY(1.5em);
+  transform: translateX(-3.9em) translateY(1em);
 }
 
 .abt {
-  grid-row-start: 8;
-  /* autoprefixer: off */
-  grid-row-end: 9;
+  grid-row-start: 10;
+  grid-row-end: 11;
   grid-column-start: 1;
-  /* autoprefixer: off */
   grid-column-end: 2;
-  transform: translateX(5.9em) translateY(3em);
+  transform: translateX(2em) translateY(0em);
 }
 
 .abt-text {
-  grid-row-start: 8;
-  /* autoprefixer: off */
-  grid-row-end: 9;
+  grid-row-start: 10;
+  grid-row-end: 11;
   grid-column-start: 2;
-  /* autoprefixer: off */
   grid-column-end: 3;
-  transform: translateX(5.3em) translateY(2.7em);
+  transform: translateX(-1.5em) translateY(0em);
+}
+
+.code {
+  grid-row-start: 11;
+  grid-row-end: 12;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  transform: translateX(1em) translateY(-1em);
+}
+
+.code-text {
+  grid-row-start: 11;
+  grid-row-end: 12;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  transform: translateX(-2.6em) translateY(-1em);
 }
